--- a/styles.css
+++ b/styles.css
@@ -9,19 +9,43 @@ body {
 h1, h2, h3, h4, h5 {
     font-family: Arial, Arial, Helvetica, sans-serif;
 }
-  
+.button {
+  background-color:crimson;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 10px;
+}
+.button:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+.attention {
+  font-size: 0.85em;    /* Smaller font size */
+  color: #888888;       /* Gray color for subtlety */
+  font-style: italic;   /* Optional: makes it less formal */
+  margin-left: 6px;     /* Optional: slight indent */
+}
+
   /* Dark mode styles */
   @media (prefers-color-scheme: dark) {
     body {
       background-color: #333333;
       color: #e2e2e2;
     }
-    h1, h2, h3, h4, h5 {
+    h2, h3, h4, h5 {
       color: #f4f4f4;
       font-family: Arial, Arial, Helvetica, sans-serif;
     }
+    h1 {
+      color:crimson;
+      font-family: Arial, Helvetica, sans-serif;
+    }
     .button {
-        background-color: #04AA6D; /* Green */
+        background-color:crimson;
         border: none;
         color: white;
         padding: 15px 32px;
