Added more options for download, bug fixes preventing the download from working properly. Automatially close settings when hitting safe

--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@ h1, h2, h3, h4, h5 {
   display: inline-block;
   font-size: 16px;
   border-radius: 10px;
+  cursor: pointer;
 }
 .button:hover {
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
@@ -54,6 +55,7 @@ h1, h2, h3, h4, h5 {
         display: inline-block;
         font-size: 16px;
         border-radius: 10px;
+        cursor: pointer;
       }
       .button:hover {
           box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
