--- a/styles.css
+++ b/styles.css
@@ -6,9 +6,16 @@ body {
     color: black;
     font-family: Arial, Arial, Helvetica, sans-serif;
   }
-h1, h2, h3, h4, h5 {
+
+h2, h3, h4, h5 {
     font-family: Arial, Arial, Helvetica, sans-serif;
 }
+
+h1 {
+  color:crimson;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 .button {
   background-color:crimson;
   border: none;
@@ -21,9 +28,11 @@ h1, h2, h3, h4, h5 {
   border-radius: 10px;
   cursor: pointer;
 }
+
 .button:hover {
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
+
 .attention {
   font-size: 0.85em;    /* Smaller font size */
   color: #888888;       /* Gray color for subtlety */
